--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
         "tailwindcss": "^3.0.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
+        "@fullcalendar/bootstrap": "^5.11.3",
+        "@fullcalendar/core": "^5.11.3",
+        "bootstrap": "^4.6.2"
     }
 }
