--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
+        "autoprefixer": "^10.4.8",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.16",
         "postcss-import": "^14.0.1",
-        "tailwindcss": "^3.0.0"
+        "tailwindcss": "^3.1.8"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
         "@fullcalendar/bootstrap": "^5.11.3",
         "@fullcalendar/core": "^5.11.3",
-        "bootstrap": "^4.6.2"
+        "bootstrap": "^5.2.1"
     }
 }
